--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "portal-vue": "^2.1.7",
     "serve-static": "^1.14.1",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.5.1"
   },
