--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
     "vue-router": "^3.2.0",
+    "vue2-animate": "^2.1.4",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
