--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "serve-static": "^1.14.1",
+    "vanilla-tilt": "^1.7.0",
     "vue": "^2.6.11",
     "vue-analytics": "^5.22.1",
+    "vue-media-queries": "0.0.5",
     "vue-router": "^3.2.0",
+    "vue-tilt.js": "^1.1.1",
     "vue2-animate": "^2.1.4",
     "vuex": "^3.5.1"
   },
